--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,7 +5,7 @@ seeds = false
 skip-lint = false
 
 [programs.localnet]
-my_token_program = "43uxjSHdLq7ahspsXwkCBLBh3qmgLf6A38RBbJgHycfK"
+my_token_program = "J6zNmngkHVqYMXkAgZtUKCstQvV6MHCBXqijh2Tn4YJA"
 
 
 [registry]
@@ -13,7 +13,7 @@ url = "https://api.apr.dev"
 
 [provider]
 cluster = "Localnet"
-wallet = "/home/arlen/.config/solana/id.json"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
