--- a/programs/my_token_program/Cargo.toml
+++ b/programs/my_token_program/Cargo.toml
@@ -18,9 +18,10 @@ default = []
 [dependencies]
 solana-program = "1.16.16"
 anchor-lang = "0.29.0"
-anchor-spl = "0.29.0"
+anchor-spl = {version = "0.29.0", features = ["metadata"]}
 sha2-const = "0.1.2"
 
 spl-transfer-hook-interface = { version = "0.4.1" }
 spl-tlv-account-resolution = { version = "0.5.1" }
 spl-pod = "0.1.0"
+spl-token =	"4.0.0"
