--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "scripts": {
         "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-        "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+        "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
+        "test": "mocha tests/custom_token/custom_token.ts"
     },
     "dependencies": {
         "@coral-xyz/anchor": "^0.29.0",
@@ -12,11 +13,12 @@
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
-        "@types/mocha": "^9.0.0",
+        "@types/mocha": "^9.1.1",
         "chai": "^4.5.0",
         "mocha": "^10.7.3",
         "prettier": "^2.6.2",
         "ts-mocha": "^10.0.0",
-        "typescript": "^4.3.5"
+        "ts-node": "^10.9.2",
+        "typescript": "^4.9.5"
     }
 }
