--- a/programs/my_token_program/Cargo.toml
+++ b/programs/my_token_program/Cargo.toml
@@ -16,12 +16,12 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-solana-program = "1.16.16"
+solana-program = "1.17.13"
 anchor-lang = "0.29.0"
 anchor-spl = {version = "0.29.0", features = ["metadata"]}
 sha2-const = "0.1.2"
 
-spl-transfer-hook-interface = { version = "0.4.1" }
-spl-tlv-account-resolution = { version = "0.5.1" }
+spl-transfer-hook-interface = "0.4.1"
+spl-tlv-account-resolution = "0.5.0"
 spl-pod = "0.1.0"
 spl-token =	"4.0.0"
